
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v1.2.0]]

== 1.2.0 (20.11.2019)

WARNING: The internal database structure has changed significantly to avoid vertices with many edges. This will result in a higher write performance on bigger systems. For this change, the API of Gentics Mesh did not change at all. When starting with this version on an existing database, the structure changes will be applied automatically, which will take some time to complete.

CAUTION: If you are running Gentics Mesh in cluster mode, you need to link:{{< relref "clustering.asciidoc" >}}#_setup[initialize the cluster again]. You must use the `-initCluster` command line argument or set the `MESH_CLUSTER_INIT` to `true` on one of the master instances of the cluster.

icon:check[] Java Rest Client: Generic methods (`get`, `post`, `put`, `delete`) now allow response objects of any class.

icon:check[] UI: The UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/develop/CHANGELOG.md#110---2019-11-20[1.1.0].

[[v1.1.1]]
== 1.1.1 (11.11.2019)

icon:plus[] GraphQL: The GraphQL Endpoint now supports the `wait` query-parameter like the Search Endpoint does. link:https://github.com/gentics/mesh/issues/805[#805]

icon:plus[] Clustering: The role of an instance has been added to the link:https://getmesh.io/docs/api/#admin_cluster_status_get[cluster status response].

icon:check[] Core: Some optimizations to uploading binaries have been made.

icon:check[] Core: Fixed an issues that sometimes caused errors when performing write requests during a schema migration.

icon:check[] UI: The UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/develop/CHANGELOG.md#102---2019-11-11[1.0.2].

[[v1.1.0]]
== 1.1.0 (29.10.2019)
